--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Get Started",
   "main": "index.js",
   "scripts": {
-    "setup-dbs": "psql -f setup-dbs.sql",
+    "setup-dbs": "psql -f db/seed/setup-dbs.sql",
     "test": "jest"
   },
   "keywords": [],
