worked on seeding database

--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "setup-dbs": "psql -f db/seed/setup-dbs.sql",
     "seed": "node ./db/seed/seed-run.js",
-    "test": "jest"
+    "test-util": "jest util"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
     "jest": "^29.7.0"
