--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
+    "jest-sorted": "^1.0.15",
     "supertest": "^7.0.0"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "jest-sorted"
+    ]
   }
 }
